--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
+  carousel_slider: null
+  cupertino_icons: null
   flutter:
     sdk: flutter
-  get: ^4.6.5
-  hive_flutter: ^1.1.0
-  hive: ^2.2.3
-  avatar_glow:
-  animations: ^2.0.7
-
+  get: null
+  google_fonts: ^3.0.1
+  hive: null
+  hive_flutter: null
+  
 dev_dependencies:
   build_runner: ^2.3.3
   flutter_lints: ^2.0.0
