--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   cupertino_icons: null
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.3.0
   get: null
   google_fonts: ^3.0.1
   hive: null
   hive_flutter: null
-  
+  flutter_screenutil: ^5.6.0
+
 dev_dependencies:
   build_runner: ^2.3.3
   flutter_lints: ^2.0.0
