--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,14 @@ dependencies:
   cupertino_icons: null
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.6.0
   font_awesome_flutter: ^10.3.0
   get: null
   google_fonts: ^3.0.1
   hive: null
   hive_flutter: null
-  flutter_screenutil: ^5.6.0
-  http:
+  http: null
+  lottie: ^2.2.0
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -60,7 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/img/
-  #   - images/a_dot_ham.jpeg
+    - lib/assets/video/
+    - lib/assets/animations/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
