--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: null
   http: null
   lottie: ^2.2.0
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   build_runner: ^2.3.3
